--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -31,21 +31,18 @@
                         <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/jobs">Posts</a>
+                        <a class="nav-link active" aria-current="page" href="/api/posts">Posts</a>
                     </li>
                     <% if(locals.userEmail) {%>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/jobPost">Post New Job</a>
+                            <a class="nav-link active" aria-current="page" href="/users/logout">Logout</a>
                         </li>
                         <% }else { %>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/register">Register</a>
+                        <a class="nav-link active" aria-current="page" href="/users/register">Register</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/login">Login</a>
+                        <a class="nav-link active" aria-current="page" href="/users/login">Login</a>
                     </li>
                     <% } %>
 
