Implemented all the functionalities of Posts., JWT auth

--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -1,6 +1,6 @@
 <h1 class="mt-5 mb-4">Register</h1>
 
-<form action="/register" method="post">
+<form action="/api/user/register" method="post">
     <div class="mb-3">
         <label for="name" class="form-label">Name</label>
         <input type="text" class="form-control" id="name" name="name" required>
