--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/posts.css">
+    <link rel="stylesheet" href="/css/home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -31,18 +33,21 @@
                         <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/api/posts">Posts</a>
+                        <a class="nav-link active" aria-current="page" href="/api/posts/all">Posts</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/api/posts/addPost">Add Post</a>
                     </li>
                     <% if(locals.userEmail) {%>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/users/logout">Logout</a>
+                            <a class="nav-link active" aria-current="page" href="/api/user/logout">Logout</a>
                         </li>
                         <% }else { %>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/users/register">Register</a>
+                        <a class="nav-link active" aria-current="page" href="/api/user/register">Register</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/users/login">Login</a>
+                        <a class="nav-link active" aria-current="page" href="/api/user/login">Login</a>
                     </li>
                     <% } %>
 
