--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -6,7 +6,7 @@
     </div>
     <%}%>
 
-<form action="/login" method="post">
+<form action="/api/user/login" method="post">
     
     <div class="mb-3">
         <label for="email" class="form-label">Email address</label>
