--- a/src/views/postDetails.ejs
+++ b/src/views/postDetails.ejs
@@ -7,4 +7,10 @@
         <input type="hidden" name="_method" value="POST">
         <button type="submit" class="btn btn-danger">Delete</button>
     </form>
+    <a class="p-1 rounded" aria-current="page" href="/api/comments/<%= post.id %>">View Comments</a>
+    <!-- Add Comment Form -->
+    <form action="/api/comments/<%= post.id %>" method="POST">
+        <input type="text" name="content" placeholder="Add a comment...">
+        <button type="submit">Add Comment</button>
+    </form>
 </div>
