--- a/src/views/postDetails.ejs
+++ b/src/views/postDetails.ejs
@@ -5,12 +5,13 @@
     <img src="<%= post.imageUrl %>" alt="Post Image">
     <form action="<%= post.id %>" method="POST">
         <input type="hidden" name="_method" value="POST">
-        <button type="submit" class="btn btn-danger">Delete</button>
+        <button type="submit" class="btn btn-danger btn_form">Delete</button>
     </form>
+    <div><a class="p-1 rounded" aria-current="page" href="/api/likes/<%= post.id %>">View Likes</a></div>
     <a class="p-1 rounded" aria-current="page" href="/api/comments/<%= post.id %>">View Comments</a>
     <!-- Add Comment Form -->
     <form action="/api/comments/<%= post.id %>" method="POST">
         <input type="text" name="content" placeholder="Add a comment...">
-        <button type="submit">Add Comment</button>
+        <button type="submit" class="btn btn-success">Add Comment</button>
     </form>
 </div>
